<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/for_you_msg" />
    <item
        android:id="@+id/country"
        android:enabled="true"
        android:icon="@drawable/ic_country"
        android:title="@string/country_msg" />
    <item
        android:id="@+id/fav"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favourite_msg" />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search_msg" />
    <!--    <item-->
    <!--        android:id="@+id/add"-->
    <!--        android:enabled="true"-->
    <!--        android:icon="@drawable/ic_add"-->
    <!--        android:title="@string/add_msg" /> -->
    <item
        android:id="@+id/plan"
        android:enabled="true"
        android:icon="@drawable/ic_plan"
        android:title="@string/plan" />
    <!--    <item-->
    <!--        android:id="@+id/calender"-->
    <!--        android:enabled="true"-->
    <!--        android:icon="@drawable/ic_calendar"-->
    <!--        android:title="@string/calender_msg" />-->

</menu>